--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,12 @@
   width: fit-content;
   margin: 150px auto;
   display: flex;
+  background: rgba(255, 255, 255, 0.3); /* Semi-transparent background */
+  backdrop-filter: blur(10px); /* Background blur effect */
+  -webkit-backdrop-filter: blur(10px); /* Safari support */
+  border-radius: 10px; /* Optional: to soften the edges */
+  padding: 20px; /* Adjust padding as necessary */
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Optional: for a shadow effect */
 }
 .user img {
   width: 320px;
@@ -20,6 +26,7 @@
 .info {
   padding: 10px 50px;
   transition: 0.5s;
+  
 }
 .info h1 {
   font-size: 80px;
@@ -54,19 +61,22 @@
 .close-icon::before,
 .close-icon::after {
   content: "";
-  height: 100%;
+  height: 50%;
   width: 2px;
   background: #333;
   position: absolute;
   top: 0;
   left: 50%;
   margin-left: -1px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
 }
 .close-icon::before {
-  transform: rotate(30deg);
+  transform: rotate(40deg);
 }
 .close-icon::after {
-  transform: rotate(-30deg);
+  transform: rotate(-40deg);
+  top:121px
+  
 }
 .hide-details .info {
   transform: translateX(50px);
